@@ -18,7 +18,7 @@ set -o errexit
 set -o nounset
 set -o pipefail
 
-MOUNTER_VERSION=v2
+MOUNTER_VERSION=v3
 MOUNTER_USER=root
 ROOT_DIR=/home/kubernetes/bin
 RKT_BINARY=${ROOT_DIR}/rkt
@@ -46,10 +46,18 @@ fi
 
 echo "Running mount using a rkt fly container"
 
-${RKT_BINARY} run --stage1-path=${STAGE1_ACI} \
-	--insecure-options=image \
-	--volume=kubelet,kind=host,source=/var/lib/kubelet,readOnly=false,recursive=true \
-	--mount volume=kubelet,target=/var/lib/kubelet \
-	${MOUNTER_IMAGE} --user=${MOUNTER_USER} --exec /bin/mount -- "$@"
+if [ "$#" -eq 0 ]; then
+  ${RKT_BINARY} run --stage1-path=${STAGE1_ACI} \
+    --insecure-options=image \
+    --volume=kubelet,kind=host,source=/var/lib/kubelet,readOnly=false,recursive=true \
+    --mount volume=kubelet,target=/var/lib/kubelet \
+    ${MOUNTER_IMAGE} --user=${MOUNTER_USER} --exec /bin/mount
+else
+  ${RKT_BINARY} run --stage1-path=${STAGE1_ACI} \
+    --insecure-options=image \
+    --volume=kubelet,kind=host,source=/var/lib/kubelet,readOnly=false,recursive=true \
+    --mount volume=kubelet,target=/var/lib/kubelet \
+    ${MOUNTER_IMAGE} --user=${MOUNTER_USER} --exec /startmounter.sh -- "$@"
+fi
 
 echo "Successfully ran mount using a rkt fly container"
